--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i18n Flag Switcher Demo</title>
   <title>Attendance & Leave Review System</title>
 
   <!-- Tailwind / Icons -->
@@ -28,6 +27,14 @@
     .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace; }
     .btn { @apply inline-flex items-center rounded-lg px-4 py-2 text-sm font-medium; }
   </style>
+
+  <style>
+    .flag{width:26px;height:18px;border-radius:3px;display:block}
+    .lang-btn{padding:6px 8px;border:1px solid #E5E7EB;border-radius:8px;background:#fff}
+    .lang-btn.active{outline:2px solid #6366F1;outline-offset:0}
+    .lang-btn:hover{background:#F9FAFB}
+  </style>
+
 </head>
 <body class="bg-gray-50">
   <!-- Topbar -->
@@ -43,11 +50,7 @@
           <div class="flex items-center space-x-2">
             <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Ccircle cx='16' cy='16' r='16' fill='%234F46E5'/%3E%3Ctext x='16' y='20' text-anchor='middle' fill='white' font-size='12' font-weight='bold'%3EHR%3C/text%3E%3C/svg%3E" class="w-8 h-8 rounded-full" alt="User">
             <span class="text-sm font-medium text-gray-700">HR Admin</span>
-          <div class="ml-4 flex items-center gap-1" id="langSwitch">
-            <button class="px-2 py-1 rounded-md border text-sm hover:bg-gray-100" data-lang="th" title="ภาษาไทย">🇹🇭 TH</button>
-            <button class="px-2 py-1 rounded-md border text-sm hover:bg-gray-100" data-lang="en" title="English">🇬🇧 EN</button>
-            <button class="px-2 py-1 rounded-md border text-sm hover:bg-gray-100" data-lang="ja" title="日本語">🇯🇵 JA</button>
-          </div>
+          <div class="ml-4 flex items-center gap-1" id="langSwitch"><button class="lang-btn" data-lang="th" title="ภาษาไทย" aria-label="ภาษาไทย"><img class="flag" alt="TH" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" /></button><button class="lang-btn" data-lang="en" title="English" aria-label="English"><img class="flag" alt="GB" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" /></button><button class="lang-btn" data-lang="ja" title="日本語" aria-label="日本語"><img class="flag" alt="JP" src="https://flagcdn.com/24x18/jp.png" srcset="https://flagcdn.com/48x36/jp.png 2x" /></button></div>
           </div>
         </div>
       </div>
@@ -880,6 +883,7 @@ function applyI18n(lang){
     dateEl.textContent = new Date().toLocaleDateString(locales[lang] || 'th-TH', { year:'numeric', month:'long', day:'numeric' });
   }
   localStorage.setItem('lang', lang);
+  try{document.querySelectorAll('#langSwitch .lang-btn').forEach(btn=>btn.classList.toggle('active', btn.getAttribute('data-lang')===lang));}catch(e){}
 }
 
 document.addEventListener('DOMContentLoaded', () => {
@@ -894,8 +898,18 @@ document.addEventListener('DOMContentLoaded', () => {
   applyI18n(localStorage.getItem('lang') || 'th');
 });
 
-/* Duplicate I18N and applyI18n removed to prevent redeclaration error. */
-
-  </script>
+  
+document.addEventListener('DOMContentLoaded', () => {
+  const sw = document.getElementById('langSwitch');
+  if (sw) {
+    sw.addEventListener('click', (e) => {
+      const btn = e.target.closest('.lang-btn,[data-lang]');
+      if(!btn) return;
+      const lang = btn.getAttribute('data-lang');
+      if(lang) { try { applyI18n(lang); } catch(e){} }
+    });
+  }
+});
+</script>
 </body>
 </html>
